[metadata]
name = qytools
author = qiaobanzhu
author-email = yunqiao2014@163.com
summary = qytools is tools collection
description-file = README.md
license = enterprise

[files]
packages =
    qytools

[pbr]

[wheel]
universal = 1

[entry_points]
console_scripts =
    xmind2md = qytools.xmind2md:main
    bearcal = qytools.cal:main 